--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "2.26.x",
     "del": "^5.1.0",
     "gulp": "4.0.x",
+    "gulp-cheerio": "^1.0.0",
     "gulp-csso": "^4.0.1",
     "gulp-ext-replace": "^0.3.0",
     "gulp-html-beautify": "^1.0.1",
@@ -34,7 +35,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp css",
+    "build": "gulp build",
     "start": "gulp start"
   },
   "browserslist": [
